--- a/MobileLocationAcquisition/MobileLocationAcquisition/Base.lproj/Main.storyboard
+++ b/MobileLocationAcquisition/MobileLocationAcquisition/Base.lproj/Main.storyboard
@@ -103,13 +103,14 @@
                                     <action selector="uploadAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gBi-ne-HRW"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SiM-ke-30S">
+                            <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SiM-ke-30S">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="DmP-Hg-AFC"/>
                                     <constraint firstAttribute="width" secondItem="SiM-ke-30S" secondAttribute="height" multiplier="1:1" id="M64-fS-4Fa"/>
                                 </constraints>
                                 <state key="normal" image="now"/>
+                                <state key="selected" image="now_h"/>
                                 <connections>
                                     <action selector="spanSetAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="25h-QK-AWy"/>
                                 </connections>
@@ -148,5 +149,6 @@
     </scenes>
     <resources>
         <image name="now" width="22" height="22"/>
+        <image name="now_h" width="22" height="22"/>
     </resources>
 </document>
